certifications/CKAD/6-service-and-networking/nginx-service-clusterip.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-service-clusterip-pod
  labels:
    app.kubernetes.io/name: proxy
spec:
  containers:
    - name: nginx
      image: nginx:stable
      ports:
        - containerPort: 80
          name: container-port

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-clusterip
spec:
  selector:
    app.kubernetes.io/name: proxy
  ports:
    - name: name-of-service-port
      protocol: TCP
      # the only mandatory field is port
      port: 8080
      targetPort: container-port
