certifications/CKAD/6-service-and-networking/nginx-service-nodeport.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-service-nodeport-pod
  labels:
    app.kubernetes.io/name: proxy
spec:
  containers:
    - name: nginx
      image: nginx:stable
      ports:
        - containerPort: 80
          name: container-port

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-nodeport
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: proxy
  ports:
    - name: name-of-service-port
      protocol: TCP
      # the only mandatory field is port
      port: 8080
      # if nodePort is not provided one will be selected between 30000-32767
      nodePort: 30080
      # if you don't provide the targetPort it will be the same as port
      targetPort: container-port
