certifications/CKAD/6-service-and-networking/db-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: frontend
      ports:
        - protocol: TCP
          port: 3306
  egress:
    # an agent on db pod needs to access the backup server outside the k8s cluster
    - to:
        - ipBlock:
            cidr: 192.168.5.10/32
      ports:
        - port: 80
          protocol: TCP
